# hep_foundation

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  anomaly_detection_bug_investigation.md  atlas_catalog_counts.json  data-extraction.ipynb  implementation_plan.md  label_histogram_issue.md  launch_gradio.py  main.py  model-manager.ipynb  out.txt  out2.txt  project-overview.md  pyproject.toml  requirements.txt  run_pytest.py  setup.py  setup.sh  test_old_format.yaml  test_standalone.yaml  vulture_whitelist.py
.cursor/rules/: eigenrobot.mdc  project-overview.mdc  project_notes.mdc  testing.mdc
.devcontainer/: devcontainer.json
.ipynb_checkpoints/: launch_gradio-checkpoint.py  my_config-checkpoint.yaml  setup-checkpoint.sh
_experiment_config_stack/: README.md
_experiment_config_stack/.ipynb_checkpoints/: README-checkpoint.md  leading_pt_experiment_config-checkpoint.yaml  leading_pt_experiment_config_2-checkpoint.yaml  met_experiment_config-checkpoint.yaml
_standalone_experiments/001_Standalone_simple_test_standalone/: _experiment_info.json
_standalone_experiments/002_Standalone_simple_test_standalone/: _experiment_info.json
_standalone_experiments/003_Standalone_simple_test_standalone/: _experiment_info.json
_standalone_experiments/004_Standalone_simple_test_standalone/: _experiment_info.json
_standalone_experiments/005_Standalone_simple_test_standalone/: _experiment_info.json
_standalone_experiments/006_Standalone_simple_test_standalone/: _experiment_info.json
_standalone_experiments/007_Standalone_simple_test_standalone/: _experiment_info.json
_standalone_experiments/008_Standalone_simple_test_standalone/: _experiment_info.json
_standalone_experiments/009_Standalone_simple_test_standalone/: _experiment_config.yaml  _experiment_info.json
_temp_test/: test_no_raw_samples.yaml
experiments/: registry.db
foundation_experiments/001_Foundation VAE Model/: experiment_data.json
foundation_experiments/002_Foundation VAE Model/: experiment_data.json
foundation_experiments/003_Foundation VAE Model/: experiment_data.json
foundation_experiments/004_Foundation VAE Model/: experiment_data.json
foundation_experiments/005_Foundation VAE Model/: experiment_data.json
jobs/: debug_pipeline.sh  submit_pipeline_debug_simple.sh  submit_pipeline_leadingpt.sh  submit_pipeline_simple.sh  submit_pipeline_standalone.sh
jobs/.ipynb_checkpoints/: submit_pipeline_simple-checkpoint.sh
model_store/c6242722-7e07-4ad1-844b-bca661826ea3/: training_config.yaml
notebooks/: data-extraction.ipynb  model-manager.ipynb  track_analysis_results.json
notebooks/analysis_output/: progress.json  run_statistics.json
notebooks/experiments/: registry.db
processed_datasets/configs/: dataset_runs00296939_00296942_00297447_tracks56_012f3191_config.yaml  dataset_runs00296939_00296942_00297447_tracks56_0c68f1d7_config.yaml  dataset_runs00296939_00296942_tracks20_03630283_config.yaml  dataset_runs00296939_00296942_tracks20_a487fe79_config.yaml  dataset_runs00296939_00296942_tracks30_0036c469_config.yaml  dataset_runs00296939_00296942_tracks30_3debb812_config.yaml  dataset_runs00296939_00296942_tracks56_0a78a2ae_config.yaml
processed_datasets/datasets/: dataset_runs00296939_00296942_tracks20_03630283.h5  dataset_runs00296939_00296942_tracks20_a487fe79.h5  dataset_runs00296939_00296942_tracks30_0036c469.h5  dataset_runs00296939_00296942_tracks30_3debb812.h5  dataset_runs00296939_00296942_tracks56_0a78a2ae.h5
scripts/: async_run_foundation_model_pipeline.py  create_datasets.py  download_catalogs.py  generate_catalog_counts.py  generate_physlite_branch_index.py  inspect_registry.py  plot_training_histories.py  run_foundation_model_pipeline.py  run_pipeline.py  run_pipelines.py  run_standalone_regression.py  stop_pipeline.py  test_gpu.py  test_model_evaluation.py  test_model_pipeline.py  test_signal_download.py  train_regression.py  transfer_configs.py  transfer_datasets.py
scripts/.ipynb_checkpoints/: run_standalone_regression-checkpoint.py
src/hep_foundation/: __init__.py  atlas_data_manager.py  atlas_file_manager.py  autoencoder.py  base_model.py  dataset_manager.py  dnn_predictor.py  foundation_model_pipeline.py  logging_config.py  model_factory.py  model_pipeline.py  model_registry.py  model_tester.py  model_trainer.py  (+9 more)
src/hep_foundation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
standalone_utils/: leading_pt_experiment_config.yaml  run_standalone_regression.py  submit_pipeline_standalone.sh  test_standalone.yaml
test_models/: test_autoencoder.h5
tests/: _test_pipeline_config.yaml  leading_pt_experiment_config.yaml  test_pipeline.py
(+239 files in other folders)
