[project]
name = "hep-foundation"
version = "0.1.0"
description = "A python package for training foundation models on high energy physics data"
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name="Alexander Yue", email="alexyue@stanford.edu" },
]


dependencies = [
    "numpy==2.1.3",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "uproot>=5.6.0",
    "matplotlib>=3.10.3",
    "psutil>=7.0.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
    "keras>=3.10.0",
    "pyyaml>=6.0.2",
]

[project.urls]
"Homepage" = "https://github.com/Alezander9/hep-foundation"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hep_foundation"]


[tool.ruff]
# Same as Black.
line-length = 88

[tool.ruff.lint]
# Enable Pyflakes (F) and pycodestyle (E) and isort (I) and pyupgrade (UP) codes by default.
# See https://docs.astral.sh/ruff/rules/
select = ["E", "F", "I", "UP"]
# We ignore the line length limit rule E501
ignore = ["E501"] 

# Allow unused variables when starting with underscores.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.6",
    "pytest-cov>=6.1.1",
]
